--- a/question_app_fe/src/assets/css/main.css
+++ b/question_app_fe/src/assets/css/main.css
@@ -26,6 +26,33 @@ code {
   margin-left: 5px;
 }
 
+/*======================
+    Answer
+=======================*/
+.answer {
+  display: flex;
+  background-color: #efefef;
+  border-radius: 10px;
+}
+
+.answer-user {
+  margin-left: 1rem;
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.answer-user-logo {
+  padding: 1rem;
+  border: 2px solid gray;
+  border-radius: 50%;
+}
+
+.answer-text {
+  margin-top: 1rem;
+}
+
 
 /*======================
     404 page
